[gd_scene load_steps=6 format=3 uid="uid://20htc0onvef7"]

[ext_resource type="Script" uid="uid://fyyk25odpy7e" path="res://script/graveyard-new/gate.gd" id="1_3m11h"]
[ext_resource type="Texture2D" uid="uid://dymr0d76yd3mw" path="res://map_phase/graveyard/assets/Fence, Gate, Signs/Graveyard_DoorClose.png" id="1_72do6"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3m11h"]
size = Vector2(56, 50.5)

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_oskft"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_oskft"]
size = Vector2(42, 46)

[node name="Area2D" type="Area2D"]
script = ExtResource("1_3m11h")

[node name="GraveyardDoorClose" type="Sprite2D" parent="."]
position = Vector2(1.9073486e-06, -24.000004)
scale = Vector2(0.5121951, 0.5481928)
texture = ExtResource("1_72do6")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -24)
shape = SubResource("RectangleShape2D_3m11h")

[node name="StaticBody2D" type="StaticBody2D" parent="."]
physics_material_override = SubResource("PhysicsMaterial_oskft")

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(0, -24)
shape = SubResource("RectangleShape2D_oskft")

[node name="PromptLabel" type="Label" parent="."]
offset_left = 32.0
offset_top = 3.0
offset_right = 115.0
offset_bottom = 24.0
theme_override_font_sizes/font_size = 9

[connection signal="body_entered" from="." to="." method="_on_Gate_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_Gate_body_exited"]
